--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,53 @@
 name: build
-
 on:
   push:
-    #branches:
-      #- '2.10.**'
-    tags:
-      - '*.*.*'
+    branches: ['main']
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - dist: ubuntu_16
+          - dist: ubuntu_18
+          - dist: ubuntu_20
+          - dist: ubuntu_22
+          - dist: debian_10
+          - dist: debian_11
+          - dist: centos_7
+    permissions:
+      contents: read
+      packages: write
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Docker meta
+
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
-          # list of Docker images to use as base name for tags
-          images: |
-            easzlab/kubeasz-sys-pkg
-            #ghcr.io/username/app
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            #type=schedule
-            #type=ref,event=branch
-            type=ref,event=tag
-            #type=ref,event=pr
-            #type=semver,pattern={{version}}
-            #type=semver,pattern={{major}}.{{minor}}
-            #type=semver,pattern={{major}}
-            #type=sha
-      -
-        name: Set up QEMU
+          images: "easzlab/kubeasz-sys-pkg"
+          tags: "1.0.0_${{ matrix.dist }}"
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: "${{ matrix.dist }}"
+          file: "${{ matrix.dist }}/Dockerfile"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
