fix: some dists

--- a/almalinux_8/Dockerfile
+++ b/almalinux_8/Dockerfile
@@ -5,7 +5,7 @@
 
 FROM almalinux:8 as downloader
 
-RUN yum install --downloadonly --downloaddir=/root/down \
+RUN yum install --downloadonly --downloaddir=/root/down -y \
       bash-completion \
       conntrack-tools \
       ipset \
