--- a/fedora_37/Dockerfile
+++ b/fedora_37/Dockerfile
@@ -5,7 +5,7 @@
 
 FROM fedora:37 as downloader
 
-RUN yum install --downloadonly --downloaddir=/root/down \
+RUN yum install --downloadonly --downloaddir=/root/down -y \
       bash-completion \
       conntrack-tools \
       ipset \
