--- a/rocky_8/Dockerfile
+++ b/rocky_8/Dockerfile
@@ -5,7 +5,7 @@
 
 FROM rockylinux:8 as downloader
 
-RUN yum install --downloadonly --downloaddir=/root/down \
+RUN yum install --downloadonly --downloaddir=/root/down -y \
       bash-completion \
       conntrack-tools \
       ipset \
