--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,22 +10,23 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - dist: ubuntu_16
-          - dist: ubuntu_18
-          - dist: ubuntu_20
-          - dist: ubuntu_22
-          - dist: debian_10
-          - dist: debian_11
-          - dist: centos_7
-          - dist: fedora_34
-          - dist: fedora_35
-          - dist: fedora_36
-          - dist: fedora_37
-          - dist: almalinux_8
-          - dist: almalinux_9
-          - dist: rocky_8
-          - dist: rocky_9
-          - dist: opensuse_leap_15
+#          - dist: ubuntu_16
+#          - dist: ubuntu_18
+#          - dist: ubuntu_20
+#          - dist: ubuntu_22
+          - dist: ubuntu_24
+#          - dist: debian_10
+#          - dist: debian_11
+#          - dist: centos_7
+#          - dist: fedora_34
+#          - dist: fedora_35
+#          - dist: fedora_36
+#          - dist: fedora_37
+#          - dist: almalinux_8
+#          - dist: almalinux_9
+#          - dist: rocky_8
+#          - dist: rocky_9
+#          - dist: opensuse_leap_15
     permissions:
       contents: read
       packages: write
@@ -53,7 +54,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           context: "${{ matrix.dist }}"
           file: "${{ matrix.dist }}/Dockerfile"
