update 1.0.4: add lvm2

--- a/debian_10/Dockerfile
+++ b/debian_10/Dockerfile
@@ -12,6 +12,7 @@ RUN apt update && \
       ipvsadm \
       jq \
       libseccomp2 \
+      lvm2 \
       nfs-common \
       rsync \
       socat && \
