--- a/centos_7/Dockerfile
+++ b/centos_7/Dockerfile
@@ -11,6 +11,7 @@ RUN yum install --downloadonly --downloaddir=/root/down \
       ipset \
       ipvsadm \
       libseccomp \
+      lvm2 \
       nfs-utils \
       rsync \
       socat && \
